fixed overflow bug

--- a/style.css
+++ b/style.css
@@ -179,19 +179,12 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* background-color: #fdf2e9; */
-    
+
+    /* Because we want header to be sticky later */
     height: 6.2rem;
     padding: 0 6.2rem;
-    /* opacity: 70%; */
+    position: relative;
 
-    /* background: rgba(129, 46, 148, 0.178);
-    box-shadow: 0 8px 32px 0 rgb(31 38 135 / 2%);
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(7px);
-    border: 1px solid rgba(255, 255, 255, 0.02); */ 
-    
-    /* background: linear-gradient(180deg, #FAFAFF 0%, #CFD4FE 100%); */
 }
 
 /* **************************** */
